--- a/Examples/Examples.csproj
+++ b/Examples/Examples.csproj
@@ -54,6 +54,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModels\CollectionExampleViewModel.cs" />
     <Compile Include="ViewModels\CommandsExampleViewModel.cs" />
     <Compile Include="ViewModels\ViewModelLocator.cs" />
     <Page Include="MainWindow.xaml">
